--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An API to store and receive users information",
   "main": "app.js",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.8",
     "agent-base": "^6.0.2",
